--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,6 @@
     width: 100%;
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
 }
 /* HEADER */
 
@@ -25,7 +24,7 @@ header nav{
 }
 
 .logo{
-    width: 130px;
+    width: 70px;
     cursor: pointer;
 }
 
@@ -45,10 +44,17 @@ header nav ul li a{
 
 .empezamos{
     padding: 15%;
-    background-color: red;
+    background-color: rgb(255, 255, 255);
+    transition: all .5s;
 }
 
-header nav ul li::before{
+.empezamos:hover{
+    color: black;
+    background-color:gold;
+    transition: all .5s;
+}
+
+header nav ul li a::before{
     content: "";
     height: 3px;
     width: 0%;
@@ -58,9 +64,11 @@ header nav ul li::before{
     bottom: -12px;
     transition: 0.4s ease-out;
 }
-header nav ul li:hover::before{
+header nav ul li a:hover::before{
     width: 100%;
 }
+
+
 /* FOOTER */
 
 footer nav{
