--- a/css/daw.css
+++ b/css/daw.css
@@ -14,7 +14,7 @@
 .contenedor-titulo{
     margin-top: 2.5rem;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 h1{
@@ -32,6 +32,7 @@ h1{
     margin: 2.5em;
     width: 20rem;
     color: white;
+    transition: transform .2s;
 }
 .carta h3{
     color: white;
@@ -48,6 +49,10 @@ h1{
 .carta ul li{
     margin-left: 3rem;
     margin-top: 0.5rem;
+    list-style-type: square;
+}
+.carta:hover{
+    transform: scale(1.1);
 }
 .contratar{
     display: flex;
@@ -56,6 +61,25 @@ h1{
     padding: 0.5rem 1rem;
     margin:auto;
     color: blue;
+    cursor: pointer;
+    transition: all 500ms;
+
+}
+.contratar-1{
+    margin-top: 7rem;
+    margin-bottom: 2rem;
+}
+.contratar-2{
+    margin-top: 3.8rem;
+    margin-bottom: 2rem;
+}
+.contratar-3{
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+.contratar:hover{
+    background-color: blue;
+    color: white;
+    transition: all 500ms;
+}
+/*  */
