--- a/css/home.css
+++ b/css/home.css
@@ -12,33 +12,36 @@
     display: flex;
     align-items: stretch;
     width: 100%;
+    margin-top: 5rem;
 }
 
 .contenedor-slogan{
     /*CONTENEDOR SLOGAN DE LA PÁGINA DE HOME*/
+    margin-top: 6rem;
     width: 50%;
-    font-size: 6rem;
+    font-size: 3.5rem;
+    text-align:left;
+    margin-left: 3rem;
 }
 
 .contenedor-imagen{
     /*CONTENEDOR IMAGEN DE LA PÁGINA DE HOME*/
     width: 50%;
+    height: 50%;
 
 }
 .contenedor-imagen img{
     /*CONTENEDOR IMAGEN */
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
 }
-
-
-
 
 .contenedor-marcas{
     margin: 4rem;
     font-size: 30px;
     text-align: center;
 }
+
 .marcas{
     padding: 10px;
     width: 65%;
