--- a/css/daw.css
+++ b/css/daw.css
@@ -4,6 +4,8 @@
 *{
     font-family: Quantico;
 }
+
+
 .contenedor-paneles{
     padding: 4rem;
     width: 100%;
@@ -19,6 +21,7 @@
     font-size: 2rem;
 }
 
+/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
 h1{
     display: inline-block;
     text-align: center;
@@ -27,7 +30,7 @@ h1{
     font-size: 4rem;
     color:white;
 }
-
+/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
 .carta{
     background-color: var(--color-fondo);
     border-radius: 2.5rem;
@@ -56,6 +59,9 @@ h1{
 .carta:hover{
     transform: scale(1.1); 
 }
+
+/* Botones dentro de las cartas */
+
 .contratar{
     display: flex;
     justify-content: center;
@@ -84,4 +90,3 @@ h1{
     color: black;
     transition: all 500ms;
 }
-/*  */
