imágenes con responsive
imágenes con responsive

--- a/css/home.css
+++ b/css/home.css
@@ -47,3 +47,8 @@
     width: 65%;
     
 }
+@media (max-width: 600px) {
+    .contenedor-imagen img {
+      src: url("../img/home/imagen-bombilla300.png");
+    }
+  }
