--- a/css/header.css
+++ b/css/header.css
@@ -79,3 +79,11 @@ header nav ul li a::before{
 header nav ul li a:hover::before{
     width: 100%;
 }
+
+@media screen and (min-width: 480px) {
+    header{
+        width: 100%;
+    }
+    
+
+}
