--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
 /* MAIN */
 *{
     font-family: Quantico;
-
+    margin: 0;
 }
 
 .contenedor-home{
@@ -48,24 +48,45 @@
     width: 65%;
     
 }
-@media screen and (max-width: 600px){
+@media (max-width: 320px){
+ .contenedor-home{
+        margin-top: 0;
+    }
+    .contenedor-slogan h1{
+        font-size: 1.2rem;
+    }
+
+    .contenedor-marcas h2{
+        font-size: 1.2rem;
+    }
+    .contenedor-imagen{
+        padding-top: 6rem;
+        width: 100px;
+    }
+    .contenedor-marcas img{
+        width: 100px;
+        height: auto;
+    }
+}
+
+@media (max-width: 600px){
     
     .contenedor-home{
         margin-top: 0;
     }
     .contenedor-slogan{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 
     .contenedor-marcas{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
     .contenedor-imagen{
         padding-top: 6rem;
-        width: 300px;
+        width: 200px;
     }
     .contenedor-marcas img{
-        width: 300px;
+        width: 200px;
         height: auto;
     }
 }
