--- a/css/footer.css
+++ b/css/footer.css
@@ -44,7 +44,7 @@ footer nav ul li a{
     height: 500px;
 }
 
-@media(max-width: 320px){
+@media (max-width: 320px){
     footer nav ul li{
         margin: auto;
     }
@@ -57,7 +57,7 @@ footer nav ul li a{
     }
 }
 
-@media screen and (max-width: 600px){
+@media (max-width: 600px){
     footer nav ul li{
         margin: auto;
     }
@@ -68,6 +68,16 @@ footer nav ul li a{
         width: 100%;
         height: 10px;
     }
-
-    
+}
+@media (max-width: 768px){
+    footer nav ul li{
+        margin: auto;
+    }
+    footer nav ul li a{
+        font-size: 1rem;
+    }
+    .img-logo{
+        width: 100%;
+        height: 10px;
+    }
 }
