--- a/css/daw.css
+++ b/css/daw.css
@@ -90,3 +90,192 @@ h1{
     color: black;
     transition: all 500ms;
 }
+
+
+@media (max-width: 480px){
+
+    .contenedor-imagen{
+        width: 100%;
+    }
+    .contenedor-imagen h1{
+        padding-top: 6rem;
+        font-size: 3rem;
+    }
+    .contenedor-titulo h2{
+        font-size: 1.5rem;
+    }
+    .contenedor-paneles{
+        flex-direction: column;
+        align-items: center;
+    }
+    .carta{
+       width: 200px;
+       margin: 2em;
+    }
+    .carta h3{
+        font-size: 1.8rem;
+    }
+    .carta h4{
+        font-size: 1.5rem;
+    }
+    .carta ul li{
+        font-size: 1rem;
+        margin-left: 1.5rem;
+        margin-top: 0.5rem;
+    }
+    .contratar-1{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-2{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-3{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+   }
+   
+   @media (min-width:481px) and (max-width: 779px){
+       
+    .contenedor-imagen{
+        width: 100%;
+    }
+    .contenedor-imagen h1{
+        padding-top: 6rem;
+        font-size: 3rem;
+    }
+    .contenedor-titulo h2{
+        font-size: 1.5rem;
+    }
+    .contenedor-paneles{
+        flex-direction: column;
+        align-items: center;
+    }
+    .carta{
+       width: 200px;
+       margin: 2em;
+    }
+    .carta h3{
+        font-size: 1.8rem;
+    }
+    .carta h4{
+        font-size: 1.5rem;
+    }
+    .carta ul li{
+        font-size: 1rem;
+        margin-left: 1.5rem;
+        margin-top: 0.5rem;
+    }
+    .contratar-1{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-2{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-3{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+   }
+   
+   @media (min-width: 780px){
+    
+    .contenedor-imagen{
+        width: 100%;
+    }
+    .contenedor-imagen img{
+        width: 100%;
+        height: 400px;
+    }
+    .contenedor-imagen h1{
+        padding-top: 5rem;
+        font-size: 2rem;
+    }
+    .contenedor-titulo h2{
+        font-size: 1.5rem;
+    }
+    .contenedor-paneles{
+        flex-direction: column;
+        align-items: center;
+    }
+    .carta{
+       width: 200px;
+       margin: 2em;
+    }
+    .carta h3{
+        font-size: 2rem;
+    }
+    .carta h4{
+        font-size: 1.5rem;
+    }
+    .carta ul li{
+        font-size: 1rem;
+        margin-left: 1.5rem;
+        margin-top: 0.5rem;
+    }
+    .contratar-1{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-2{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-3{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+   
+    body{
+        background-color: red;
+    }
+   }
+   
+   
+   @media (min-width: 1200px){
+       
+    .contenedor-imagen{
+        width: 100%;
+    }
+    .contenedor-imagen h1{
+        padding-top: 6rem;
+        font-size: 3rem;
+    }
+    .contenedor-titulo h2{
+        font-size: 1.5rem;
+    }
+
+    .carta{
+       width: 200px;
+       margin: 2em;
+    }
+    .carta h3{
+        font-size: 1.8rem;
+    }
+    .carta h4{
+        font-size: 1.5rem;
+    }
+    .carta ul li{
+        font-size: 1rem;
+        margin-left: 1.5rem;
+        margin-top: 0.5rem;
+    }
+    .contratar-1{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-2{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-3{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+   
+   
+   }
