--- a/css/footer.css
+++ b/css/footer.css
@@ -44,7 +44,7 @@ footer nav ul li a{
     height: 500px;
 }
 
-@media (max-width: 320px){
+@media (max-width: 480px){
     footer nav ul li{
         margin: auto;
     }
@@ -57,7 +57,7 @@ footer nav ul li a{
     }
 }
 
-@media (max-width: 600px){
+@media (min-width:481px) and (max-width: 779px){
     footer nav ul li{
         margin: auto;
     }
@@ -69,7 +69,7 @@ footer nav ul li a{
         height: 10px;
     }
 }
-@media (max-width: 768px){
+@media (min-width: 780px){
     footer nav ul li{
         margin: auto;
     }
@@ -79,5 +79,30 @@ footer nav ul li a{
     .img-logo{
         width: 100%;
         height: 10px;
+    }
+}
+@media (min-width: 780px){
+    footer nav ul li{
+        margin: auto;
+    }
+    footer nav ul li a{
+        font-size: 0.8rem;
+    }
+    .img-logo{
+        width: 100%;
+        height: 50px;
+    }
+}
+
+@media (min-width: 1200px){
+    footer nav ul li{
+        margin: auto;
+    }
+    footer nav ul li a{
+        font-size: 1.2rem;
+    }
+    .img-logo{
+        width: 100%;
+        height: 50px;
     }
 }
