--- a/css/daw.css
+++ b/css/daw.css
@@ -4,6 +4,9 @@
 *{
     font-family: Quantico;
 }
+body{
+    height: 100%;
+}
 
 
 .contenedor-paneles{
@@ -93,13 +96,12 @@ h1{
 
 
 @media (max-width: 480px){
-
     .contenedor-imagen{
         width: 100%;
     }
     .contenedor-imagen h1{
         padding-top: 6rem;
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     .contenedor-titulo h2{
         font-size: 1.5rem;
@@ -134,7 +136,7 @@ h1{
     .contratar-3{
         margin-top: 3rem;
         margin-bottom: 2rem;
-    }
+    }  
    }
    
 @media (min-width:481px) and (max-width: 779px){
@@ -228,7 +230,7 @@ h1{
         margin-top: 0.5rem;
     }
     .contratar-1{
-        margin-top: 7rem;
+        margin-top: 3rem;
         margin-bottom: 2rem;
     }
     .contratar-2{
@@ -289,6 +291,54 @@ h1{
         font-size: 2rem;
         color:white;
     }
+}
+@media (min-width: 2000px) {
+    .contenedor-imagen{
+        width: 100%;
+    }
+    .contenedor-imagen h1{
+        padding-top: 6rem;
+        font-size: 4rem;
+    }
+    .contenedor-titulo h2{
+        font-size: 3.1rem;
+    }
+
+    .carta{
+       width: 600px;
+       margin: 3em;
+    }
+    .carta h3{
+        font-size: 2.8rem;
+    }
+    .carta h4{
+        font-size: 2.8rem;
+    }
+    .carta ul li{
+        font-size: 2rem;
+        margin-left: 4rem;
+        margin-top: 0.5rem;
+    }
+    .contratar-1{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-2{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    .contratar-3{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+    h1{
+        position: absolute;
+        margin-top: 3%;
+        font-size: 2rem;
+        color:white;
+    }
+
+
+}
    
    
-   }
