--- a/css/footer.css
+++ b/css/footer.css
@@ -5,6 +5,7 @@
 
 footer {
   width: 100%;
+  
 }
 footer nav {
   width: 80%;
@@ -34,6 +35,7 @@ footer nav ul li a {
 .contenedor {
   width: 100%;
   height: auto;
+  
 }
 
 .img-logo {
@@ -41,6 +43,11 @@ footer nav ul li a {
   height: 500px;
 }
 
+@media (min-width: 300px) {
+  footer{
+    width: 100%;
+  }   
+}
 @media (max-width: 480px) {
   footer nav ul li {
     margin: auto;
@@ -52,6 +59,11 @@ footer nav ul li a {
     width: 100%;
     height: 10px;
   }
+  footer{
+    position: absolute;
+    bottom: 0;
+  } 
+  
 }
 @media (min-width: 481px) and (max-width: 779px) {
   footer nav ul li {
@@ -64,6 +76,8 @@ footer nav ul li a {
     width: 100%;
     height: 10px;
   }
+  
+  
 }
 @media (min-width: 780px) {
   footer nav ul li {
@@ -92,4 +106,22 @@ footer nav ul li a {
     width: 100%;
     height: 50px;
   }
-}/*# sourceMappingURL=footer.css.map */
+ 
+}
+
+@media (min-width: 2000px) {
+  footer nav ul li {
+    margin: auto;
+  }
+  footer nav ul li a {
+    font-size: 1.2rem;
+  }
+  .img-logo {
+    width: 100%;
+    height: 50px;
+  }
+ footer{
+    position: absolute;
+    bottom: 0;
+  } 
+}
