--- a/css/footer.css
+++ b/css/footer.css
@@ -47,7 +47,6 @@ footer nav ul li a {
 @media (min-width: 300px) {
   footer{
     width: 100%;
-    position: relative;
   }   
 }
 @media (max-width: 480px) {
@@ -81,6 +80,11 @@ footer nav ul li a {
   .contenedor_footer{
     height: 60px;
   }
+
+  footer{
+    position: absolute;
+    bottom: 0;
+  } 
   
 }
 @media(max-width: 1200px){
@@ -120,7 +124,11 @@ footer nav ul li a {
     width: 100%;
     height: 50px;
   }
- 
+
+ footer{
+    position: absolute;
+    bottom: 0;
+  } 
 }
 
 @media (min-width: 2000px) {
