--- a/css/footerantiguo.css
+++ b/css/footerantiguo.css
@@ -49,7 +49,7 @@ footer nav ul li a {
 @media (min-width: 300px) {
   footer{
     width: 100%;
-    position: relative; /* he puesto esto */
+   /* he puesto esto */
   }   
 }
 @media (max-width: 480px) {
@@ -124,8 +124,8 @@ footer nav ul li a {
     width: 100%;
     height: 50px;
   }
- /* footer{
+ footer{
     position: absolute;
     bottom: 0;
-  }  */
+  } 
 }
