--- a/css/footerantiguo.css
+++ b/css/footerantiguo.css
@@ -4,10 +4,7 @@
 }
 
 footer {
-  width: 100%;
-  bottom: auto;
-  position: absolute;
-  
+  width: 100%;  
 }
 footer nav {
   width: 80%;
@@ -49,6 +46,7 @@ footer nav ul li a {
 @media (min-width: 300px) {
   footer{
     width: 100%;
+    position: relative;
    /* he puesto esto */
   }   
 }
@@ -63,10 +61,9 @@ footer nav ul li a {
     width: 100%;
     height: 10px;
   }
-  /* footer{
-    position: absolute;
-    bottom: 0;
-  }  */
+  footer{
+    position: relative;
+  } 
   
 }
 @media (min-width: 481px) and (max-width: 779px) {
@@ -79,6 +76,9 @@ footer nav ul li a {
   .img-logo {
     width: 100%;
     height: 10px;
+  }
+  footer{
+    position: relative;
   }
   
   
@@ -97,6 +97,9 @@ footer nav ul li a {
     height: 10px;
     width: 100%;
     height: 50px;
+  }
+  footer{
+    position: relative;
   }
 }
 @media (min-width: 1200px) {
