--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,10 @@
   font-family: Quantico;
   margin: 0;
 }
+html {
+  min-height: 100%;
+  position: relative;
+}
 
 .contenedor-home {
   display: flex;
@@ -42,6 +46,25 @@
   width: 65%;
 }
 
+@media (min-width: 300px) {
+
+  .contenedor-slogan h1 {
+    font-size: 1.2rem;
+  }
+  .contenedor-marcas h2 {
+    font-size: 1.2rem;
+  }
+
+  .contenedor-marcas img {
+    width: 300px;
+    height: auto;
+  }
+  .contenedor-imagen {
+    width: 100px;
+  }
+}
+
+
 @media (max-width: 480px) {
   .contenedor-home {
     margin-top: 0;
@@ -49,11 +72,15 @@
   .contenedor-slogan h1 {
     font-size: 1.2rem;
   }
+  .contenedor-marcas{
+    margin: 2rem;
+    margin-top: 4rem;
+  }
   .contenedor-marcas h2 {
     font-size: 1.2rem;
   }
   .contenedor-marcas img {
-    width: 100px;
+    width: 250px;
     height: auto;
   }
   .contenedor-imagen {
@@ -66,15 +93,20 @@
     margin-top: 0;
   }
   .contenedor-slogan h1 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-top: 2rem;
   }
+  .contenedor-marcas{
+    margin: 2rem;
+    margin-bottom: 6rem;
+  }
   .contenedor-marcas h2 {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   .contenedor-marcas img {
-    width: 300px;
+    width: 500px;
     height: auto;
+
   }
   .contenedor-imagen {
     padding-top: 6rem;
@@ -86,14 +118,18 @@
   .contenedor-home {
     margin-top: 0;
   }
-  .contenedor-slogan {
-    font-size: 1.5rem;
+  .contenedor-slogan h1 {
+    font-size: 2.5rem;
+  }
+  .contenedor-marcas h2 {
+    font-size: 2rem;
   }
   .contenedor-marcas {
     font-size: 1.5rem;
+    margin-top: 5rem;
   }
   .contenedor-marcas img {
-    width: 300px;
+    width: 550px;
     height: auto;
   }
   .contenedor-imagen {
@@ -109,12 +145,19 @@
     font-size: 3rem;
   }
   .contenedor-slogan h1 {
-    padding-left: 15rem;
+    margin-top: 5rem;
+    margin-left: 10rem;
+    font-size: 2.9rem;
+  }
+
+  .contenedor-marcas{
+    margin-bottom: 8rem;
   }
   .contenedor-marcas h2 {
     font-size: 3rem;
     margin-bottom: 5rem;
   }
+
   .contenedor-marcas img {
     width: 490px;
     height: auto;
@@ -127,3 +170,34 @@
     background-color: white;
   }
 }/*# sourceMappingURL=home.css.map */
+
+@media (min-width: 2000px) {
+  .contenedor-home {
+    margin-top: 15rem;
+  }
+
+  .contenedor-slogan h1 {
+    padding-left: 15rem;
+    font-size: 4.5rem;
+  }
+
+  .contenedor-marcas{
+    margin: 10rem;
+  }
+  .contenedor-marcas h2 {
+    font-size: 4rem;
+    margin-bottom: 5rem;
+  }
+
+  .contenedor-marcas img {
+    margin-left: 2rem;
+    width: 1000px;
+    height: auto;
+  }
+  .contenedor-imagen {
+    padding-top: 6rem;
+    width: 490px;
+    margin: auto;
+  }
+
+}
