--- a/css/hosting.css
+++ b/css/hosting.css
@@ -1,278 +1,361 @@
-/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
-/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
-/* Botones dentro de las cartas */
-* {
+:root{
+  --color-fondo: #27282F;
+}
+*{
   font-family: Quantico;
+  margin: 0;
+  padding: 0;
+}
+html {
+  min-height: 100%;
+  position: relative;
 }
 
-.contenedor-paneles {
+.contenedor-imagen{
+  display: inline-block;
+  align-items: center;
+}
+.contenedor-imagen img{
+  width: 100%;
+}
+.contenedor-h1{
+  position: absolute;
+  /* top: 10%; */
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.contenedor-paneles{
   padding: 4rem;
   width: 100%;
   background-color: white;
   overflow: hidden;
-  display: inline-flex;
+  display:inline-flex; /* PARA PONERLOS EN BLOQUES HORIZONTALMENTE */
   justify-content: center;
+  
 }
-
-.contenedor-titulo {
+.contenedor-titulo{
   margin-top: 2.5rem;
   text-align: center;
   font-size: 2rem;
 }
 
-h1 {
+/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
+h1{
   display: inline-block;
   text-align: center;
-  position: absolute;
-  margin-top: 13%;
+  margin-top: 2rem;
   font-size: 4rem;
-  color: white;
+  color:white;
 }
-
-.carta {
+/* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
+.carta{
   background-color: var(--color-fondo);
   border-radius: 2.5rem;
   margin: 2.5em;
   width: 20rem;
   color: white;
-  transition: transform 0.2s;
-  background-color: #27282F;
+  transition: transform .2s;
 }
-.carta h3 {
+.carta h3{
   color: white;
   text-align: center;
   margin: 1em;
   font-size: 2em;
 }
-.carta h4 {
+.carta h4{
   text-align: center;
   margin-bottom: 2rem;
   font-size: 1.5em;
+
 }
-.carta ul li {
+.carta ul li{
   margin-left: 3rem;
   margin-top: 0.5rem;
   list-style-type: square;
 }
-.carta:hover {
-  transform: scale(1.1);
+.carta:hover{
+  transform: scale(1.1); 
 }
 
-.contratar {
+/* Botones dentro de las cartas */
+
+.contratar{
   display: flex;
   justify-content: center;
   border-radius: 1.5rem;
   padding: 0.5rem 1rem;
-  margin: auto;
+  margin:auto;
   color: black;
   cursor: pointer;
   transition: all 500ms;
+
 }
-.contratar:hover {
+.contratar-1{
+  margin-top: 7rem;
+  margin-bottom: 2rem;
+}
+.contratar-2{
+  margin-top: 3.8rem;
+  margin-bottom: 2rem;
+}
+.contratar-3{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.contratar:hover{
   background-color: gold;
   color: black;
   transition: all 500ms;
 }
 
-.contratar-1 {
-  margin-top: 7rem;
-  margin-bottom: 2rem;
-}
 
-.contratar-2 {
-  margin-top: 3.8rem;
-  margin-bottom: 2rem;
-}
+@media (max-width: 480px){
+  .contenedor-imagen{
+      width: 100%;
+  }
+  .contenedor-imagen h1{
+      margin-top: 15rem;
+      font-size: 1.2rem;
+  }
+  .contenedor-titulo h2{
+      font-size: 1.5rem;
+  }
+  .contenedor-paneles{
+      flex-direction: column;
+      align-items: center;
+  }
+  .carta{
+     width: 200px;
+     margin: 2em;
+  }
+  .carta h3{
+      font-size: 1.8rem;
+  }
+  .carta h4{
+      font-size: 1.5rem;
+  }
+  .carta ul li{
+      font-size: 1rem;
+      margin-left: 1.5rem;
+      margin-top: 0.5rem;
+  }
+  .contratar-1{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  .contratar-2{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  .contratar-3{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }  
+ }
+ 
+@media (min-width:481px) and (max-width: 779px){
+     
+  .contenedor-imagen{
+      width: 100%;
+  }
+  .contenedor-imagen img{
+      width: 100%;
+      height: 400px;
+  }
+  .contenedor-imagen h1{
+      margin-top: 25rem;
+      font-size: 2rem;
+  }
+  .contenedor-titulo h2{
+      font-size: 2rem;
+  }
+  .contenedor-paneles{
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 4rem;
+  }
+  .carta{
+     width: 300px;
+     margin: 2em;
+  }
+  .carta h3{
+      font-size: 1.5rem;
+  }
+  .carta h4{
+      font-size: 1.5rem;
+  }
+  .carta ul li{
+      font-size: 1rem;
+      margin-left: 1.5rem;
+      margin-top: 0.5rem;
+  }
+  .contratar-1{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  .contratar-2{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  .contratar-3{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+ 
+ }
+ 
+ @media (min-width: 780px){
+  
+  .contenedor-imagen{
+      width: 100%;
+  }
+  .contenedor-imagen img{
+      width: 100%;
+      height: 400px;
+  }
+  .contenedor-imagen h1{
+      margin-top: 25rem;
+      font-size: 2.5rem;
+  }
+  .contenedor-titulo h2{
+      font-size: 2rem;
+  }
+  .contenedor-paneles{
+      padding: 3rem;
+      width: 100%;
+      background-color: white;
+      overflow: hidden;
+      display:inline-flex; /* PARA PONERLOS EN BLOQUES HORIZONTALMENTE */
+      justify-content: center;
+      margin-bottom: 2rem;
+  }
+  .carta{
+     width: 300px;
+     margin: 2em;
+  }
+  .carta h3{
+      font-size: 2rem;
+  }
+  .carta h4{
+      font-size: 1.5rem;
+  }
+  .carta ul li{
+      font-size: 1rem;
+      margin-left: 1.5rem;
+      margin-top: 0.5rem;
+  }
+  .contratar-1{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  .contratar-2{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  .contratar-3{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+ 
+ }
+ 
+ 
+ @media (min-width: 1200px){
+     
+  .contenedor-imagen{
+      width: 100%;
+  }
+  .contenedor-imagen h1{
+      margin-top: 9rem;
+      font-size: 3rem;
+  }
+  .contenedor-titulo h2{
+      font-size: 1.5rem;
+  }
 
-.contratar-3 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  .carta{
+     width: 300px;
+     margin: 2em;
+  }
+  .carta h3{
+      font-size: 1.8rem;
+  }
+  .carta h4{
+      font-size: 1.5rem;
+  }
+  .carta ul li{
+      font-size: 1rem;
+      margin-left: 1.5rem;
+      margin-top: 0.5rem;
+  }
+  .contratar-1{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  .contratar-2{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  .contratar-3{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+  }
+  h1{
+      position: absolute;
+      margin-top: 3%;
+      font-size: 2rem;
+      color:white;
+  }
 }
+@media (min-width: 2000px) {
+  .contenedor-imagen{
+      width: 100%;
+  }
+  .contenedor-imagen h1{
+      margin-top: 5rem;
+      font-size: 4rem;
+  }
+  .contenedor-titulo h2{
+      font-size: 3.1rem;
+  }
 
-@media (max-width: 480px) {
-  .contenedor-imagen {
-    width: 100%;
+  .carta{
+     width: 600px;
+     margin: 3em;
   }
-  .contenedor-imagen h1 {
-    padding-top: 6rem;
-    font-size: 2.5rem;
+  .carta h3{
+      font-size: 2.8rem;
   }
-  .contenedor-titulo h2 {
-    font-size: 1.5rem;
+  .carta h4{
+      font-size: 2.8rem;
   }
-  .contenedor-paneles {
-    flex-direction: column;
-    align-items: center;
+  .carta ul li{
+      font-size: 2rem;
+      margin-left: 4rem;
+      margin-top: 0.5rem;
   }
-  .carta {
-    width: 200px;
-    margin: 2em;
+  .contratar-1{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
   }
-  .carta h3 {
-    font-size: 1.8rem;
+  .contratar-2{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
   }
-  .carta h4 {
-    font-size: 1.5rem;
+  .contratar-3{
+      margin-top: 3rem;
+      margin-bottom: 2rem;
   }
-  .carta ul li {
-    font-size: 1rem;
-    margin-left: 1.5rem;
-    margin-top: 0.5rem;
+  h1{
+      position: absolute;
+      margin-top: 3%;
+      font-size: 2rem;
+      color:white;
   }
-  .contratar-1 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  .contratar-2 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  .contratar-3 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
+
+
 }
-@media (min-width: 481px) and (max-width: 779px) {
-  .contenedor-imagen {
-    width: 100%;
-  }
-  .contenedor-imagen img {
-    width: 100%;
-    height: 400px;
-  }
-  .contenedor-imagen h1 {
-    padding-top: 6rem;
-    font-size: 3rem;
-  }
-  .contenedor-titulo h2 {
-    font-size: 2rem;
-  }
-  .contenedor-paneles {
-    flex-direction: column;
-    align-items: center;
-  }
-  .carta {
-    width: 300px;
-    margin: 2em;
-  }
-  .carta h3 {
-    font-size: 1.5rem;
-  }
-  .carta h4 {
-    font-size: 1.5rem;
-  }
-  .carta ul li {
-    font-size: 1rem;
-    margin-left: 1.5rem;
-    margin-top: 0.5rem;
-  }
-  .contratar-1 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  .contratar-2 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  .contratar-3 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (min-width: 780px) {
-  .contenedor-imagen {
-    width: 100%;
-  }
-  .contenedor-imagen img {
-    width: 100%;
-    height: 400px;
-  }
-  .contenedor-imagen h1 {
-    padding-top: 2rem;
-    padding-bottom: 5rem;
-    font-size: 2.5rem;
-  }
-  .contenedor-titulo h2 {
-    font-size: 2rem;
-  }
-  .contenedor-paneles {
-    padding: 4rem;
-    width: 100%;
-    background-color: white;
-    overflow: hidden;
-    display: inline-flex;
-    justify-content: center;
-  }
-  .carta {
-    width: 300px;
-    margin: 2em;
-  }
-  .carta h3 {
-    font-size: 2rem;
-  }
-  .carta h4 {
-    font-size: 1.5rem;
-  }
-  .carta ul li {
-    font-size: 1rem;
-    margin-left: 1.5rem;
-    margin-top: 0.5rem;
-  }
-  .contratar-1 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  .contratar-2 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  .contratar-3 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (min-width: 1200px) {
-  .contenedor-imagen {
-    width: 100%;
-  }
-  .contenedor-imagen h1 {
-    padding-top: 6rem;
-    font-size: 3rem;
-  }
-  .contenedor-titulo h2 {
-    font-size: 1.5rem;
-  }
-  .carta {
-    width: 300px;
-    margin: 2em;
-  }
-  .carta h3 {
-    font-size: 1.8rem;
-  }
-  .carta h4 {
-    font-size: 1.5rem;
-  }
-  .carta ul li {
-    font-size: 1rem;
-    margin-left: 1.5rem;
-    margin-top: 0.5rem;
-  }
-  .contratar-1 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  .contratar-2 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  .contratar-3 {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-  }
-  h1 {
-    position: absolute;
-    margin-top: 3%;
-    font-size: 2rem;
-    color: white;
-  }
-}/*# sourceMappingURL=hosting.css.map */
+ 
+ 
