--- a/css/daw.css
+++ b/css/daw.css
@@ -12,19 +12,15 @@ html {
 }
 
 .contenedor-imagen{
-    display: inline-block;
+    display: flex;
     align-items: center;
+    
 }
 .contenedor-imagen img{
     width: 100%;
 }
-.contenedor-h1{
-    position: absolute;
-    /* top: 10%; */
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%);
-}
+
+
 
 .contenedor-paneles{
     padding: 4rem;
@@ -35,17 +31,17 @@ html {
     justify-content: center;
     
 }
-.contenedor-titulo{
-    margin-top: 2.5rem;
-    text-align: center;
-    font-size: 2rem;
+#titulo{
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    
 }
+
 
 /* H1 QUE CONTIENE -> (DESARROLLO WEB) */
 h1{
-    display: inline-block;
     text-align: center;
-    margin-top: 2rem;
     font-size: 4rem;
     color:white;
 }
@@ -116,11 +112,12 @@ h1{
         width: 100%;
     }
     .contenedor-imagen h1{
-        margin-top: 15rem;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
     .contenedor-titulo h2{
-        font-size: 1.5rem;
+        margin-top: 1.5rem;
+        text-align: center;
+        font-size: 1.2rem;
     }
     .contenedor-paneles{
         flex-direction: column;
@@ -165,11 +162,12 @@ h1{
         height: 400px;
     }
     .contenedor-imagen h1{
-        margin-top: 25rem;
         font-size: 2rem;
     }
     .contenedor-titulo h2{
-        font-size: 2rem;
+        margin-top: 1.5rem;
+        text-align: center;
+        font-size: 1.8rem;
     }
     .contenedor-paneles{
         flex-direction: column;
@@ -216,10 +214,11 @@ h1{
         height: 400px;
     }
     .contenedor-imagen h1{
-        margin-top: 25rem;
         font-size: 2.5rem;
     }
     .contenedor-titulo h2{
+        margin-top: 1.8rem;
+        text-align: center;
         font-size: 2rem;
     }
     .contenedor-paneles{
@@ -268,11 +267,12 @@ h1{
         width: 100%;
     }
     .contenedor-imagen h1{
-        margin-top: 9rem;
         font-size: 3rem;
     }
     .contenedor-titulo h2{
-        font-size: 1.5rem;
+        margin-top: 1.8rem;
+        text-align: center;
+        font-size: 2.5rem;
     }
 
     .carta{
@@ -303,10 +303,7 @@ h1{
         margin-bottom: 2rem;
     }
     h1{
-        position: absolute;
-        margin-top: 3%;
         font-size: 2rem;
-        color:white;
     }
 }
 @media (min-width: 2000px) {
@@ -314,10 +311,11 @@ h1{
         width: 100%;
     }
     .contenedor-imagen h1{
-        margin-top: 5rem;
         font-size: 4rem;
     }
     .contenedor-titulo h2{
+        margin-top: 2rem;
+        text-align: center;
         font-size: 3.1rem;
     }
 
@@ -349,13 +347,8 @@ h1{
         margin-bottom: 2rem;
     }
     h1{
-        position: absolute;
-        margin-top: 3%;
         font-size: 2rem;
-        color:white;
     }
-
-
 }
    
    
