--- a/css/contacto.css
+++ b/css/contacto.css
@@ -4,12 +4,28 @@
 *{
     font-family: Quantico;
 }
+html {
+    min-height: 100%;
+    position: relative;
+}
 
 .contenedor-titulo{
     margin-top: 2.5rem;
     text-align: center;
     font-size: 2rem;
 }
+.contenedor-imagen{
+    display: flex;
+    align-items: center;
+}
+.contenedor-imagen img{
+    width: 100%;
+}
+#titulo{
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+}  
 .contenedor-titulo h2{
     font-size: 4rem;
     margin-bottom: 2rem;
@@ -51,10 +67,7 @@ textarea{
 
 /* H1 QUE CONTIENE -> (DESARROLLO WEB) */
 h1{
-    display: inline-block;
     text-align: center;
-    position: absolute;
-    margin-top: 13%;
     font-size: 4rem;
     color:white;
 }
@@ -65,14 +78,16 @@ h1{
         width: 100%;
     }
     .contenedor-imagen h1{
-        padding-top: 8rem;
-        font-size: 2.5rem;
+        font-size: 1.5rem;
     }
     .contenedor-titulo h2{
-        font-size: 1.5rem;
+      margin-top: 1.5rem;
+      text-align: center;
+      font-size: 1.2rem;
     }
     .formulario{
         width: 80%;
+        margin-bottom: 10rem;
     }
     .formulario label{
         font-size: 1.5rem;
@@ -89,13 +104,16 @@ h1{
         height: 400px;
     }
     .contenedor-imagen h1{
-        margin-top: 20%;
-        font-size: 3rem;
-    }
-    .contenedor-titulo h2{
         font-size: 2rem;
     }
-    
+    .contenedor-titulo h2{
+        margin-top: 1.5rem;
+        text-align: center;
+        font-size: 1.8rem;
+    }
+    .formulario{
+        margin-bottom: 12rem;
+    }
     .formulario label{
         font-size: 1.5rem;
     }
@@ -113,14 +131,16 @@ h1{
         height: 400px;
     }
     .contenedor-imagen h1{
-        padding-top: 2rem;
-        padding-bottom: 5rem;
         font-size: 2.5rem;
     }
     .contenedor-titulo h2{
+        margin-top: 1.8rem;
+        text-align: center;
         font-size: 2rem;
     }
-    
+    .formulario{
+        margin-bottom: 12rem;
+    }
    }
    
    
@@ -130,19 +150,25 @@ h1{
         width: 100%;
     }
     .contenedor-imagen h1{
-        padding-top: 6rem;
         font-size: 3rem;
     }
     .contenedor-titulo h2{
+        margin-top: 1.8rem;
+        text-align: center;
         font-size: 2.5rem;
     }
-
-    h1{
-        position: absolute;
-        margin-top: 3%;
-        font-size: 2rem;
-        color:white;
-    }
-   
-   
    }
+
+ @media (min-width: 2000px){
+    .contenedor-imagen{
+        width: 100%;
+    }
+    .contenedor-imagen h1{
+        font-size: 4rem;
+    }
+    .contenedor-titulo h2{
+        margin-top: 2rem;
+        text-align: center;
+        font-size: 3.1rem;
+    }
+ }
