--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,5 @@
 /* MAIN */
 
-
 * {
   font-family: Quantico;
   margin: 0;
@@ -10,12 +9,12 @@ html {
   position: relative;
 }
 
+/* CONTENEDOR DEL SLOGAN Y LA IMAGEN DE LA BOMBILLA */
 .contenedor-home {
   display: flex;
   align-items: stretch;
   width: 100%;
   margin-top: 5rem;
-  
 }
 
 .contenedor-slogan {
@@ -30,11 +29,13 @@ html {
   width: 50%;
   height: 50%;
 }
+
 .contenedor-imagen img {
   width: 70%;
   height: 70%;
 }
 
+/* CONTENEDOR DE LA IMAGEN DE MARCAS */
 .contenedor-marcas {
   margin: 4rem;
   font-size: 30px;
@@ -46,15 +47,14 @@ html {
   width: 65%;
 }
 
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (min-width: 300px) {
-
   .contenedor-slogan h1 {
     font-size: 1.2rem;
   }
   .contenedor-marcas h2 {
     font-size: 1.2rem;
   }
-
   .contenedor-marcas img {
     width: 300px;
     height: auto;
@@ -64,7 +64,6 @@ html {
     width: 100px;
   }
 }
-
 
 @media (max-width: 480px) {
   .contenedor-home {
@@ -89,6 +88,7 @@ html {
     width: 100px;
   }
 }
+
 @media (min-width: 481px) and (max-width: 779px) {
   .contenedor-home {
     margin-top: 0;
@@ -107,14 +107,13 @@ html {
   .contenedor-marcas img {
     width: 500px;
     height: auto;
-
   }
   .contenedor-imagen {
     padding-top: 6rem;
     width: 300px;
   }
-
 }
+
 @media (min-width: 780px) {
   .contenedor-home {
     margin-top: 0;
@@ -138,6 +137,7 @@ html {
     width: 300px;
   }
 }
+
 @media (min-width: 1200px) {
   .contenedor-home {
     margin-top: 0;
@@ -150,7 +150,6 @@ html {
     margin-left: 10rem;
     font-size: 2.9rem;
   }
-
   .contenedor-marcas{
     margin-bottom: 8rem;
   }
@@ -158,7 +157,6 @@ html {
     font-size: 3rem;
     margin-bottom: 5rem;
   }
-
   .contenedor-marcas img {
     width: 490px;
     height: auto;
@@ -170,18 +168,16 @@ html {
   body {
     background-color: white;
   }
-}/*# sourceMappingURL=home.css.map */
+}
 
 @media (min-width: 2000px) {
   .contenedor-home {
     margin-top: 15rem;
   }
-
   .contenedor-slogan h1 {
     padding-left: 15rem;
     font-size: 4.5rem;
   }
-
   .contenedor-marcas{
     margin: 10rem;
   }
@@ -189,7 +185,6 @@ html {
     font-size: 4rem;
     margin-bottom: 5rem;
   }
-
   .contenedor-marcas img {
     margin-left: 2rem;
     width: 1000px;
@@ -200,5 +195,4 @@ html {
     width: 490px;
     margin: auto;
   }
-
 }
