--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,6 +1,4 @@
-:root{
-    --color-fondo: #27282F;
-}
+
 *{
     font-family: Quantico;
 }
@@ -8,6 +6,8 @@ html {
     min-height: 100%;
     position: relative;
 }
+
+/* CONTENEDOR IMAGEN */
 
 .contenedor-titulo{
     margin-top: 2.5rem;
@@ -30,6 +30,9 @@ html {
     font-size: 4rem;
     margin-bottom: 2rem;
 }
+
+/* FORMULARIO */
+
 .formulario{
     width:50%;
 	padding:16px;
@@ -65,12 +68,15 @@ textarea{
 	display:block;
 }
 
-/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
+/* H1 QUE CONTIENE -> (CONTACTO) */
+
 h1{
     text-align: center;
     font-size: 4rem;
     color:white;
 }
+
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 
 @media (max-width: 480px){
 
