--- a/css/daw.css
+++ b/css/daw.css
@@ -1,11 +1,10 @@
-:root{
-    --color-fondo: #27282F;
-}
+
 *{
     font-family: Quantico;
     margin: 0;
     padding: 0;
 }
+
 html {
     min-height: 100%;
     position: relative;
@@ -16,11 +15,10 @@ html {
     align-items: center;
     
 }
+
 .contenedor-imagen img{
     width: 100%;
 }
-
-
 
 .contenedor-paneles{
     padding: 4rem;
@@ -31,6 +29,7 @@ html {
     justify-content: center;
     
 }
+
 #titulo{
     position: absolute;
     z-index: 100;
@@ -38,16 +37,16 @@ html {
     
 }
 
-
 /* H1 QUE CONTIENE -> (DESARROLLO WEB) */
 h1{
     text-align: center;
     font-size: 4rem;
     color:white;
 }
+
 /* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
 .carta{
-    background-color: var(--color-fondo);
+    background-color: #27282F;
     border-radius: 2.5rem;
     margin: 2.5em;
     width: 20rem;
@@ -75,8 +74,7 @@ h1{
     transform: scale(1.1); 
 }
 
-/* Botones dentro de las cartas */
-
+/* BOTONES QUE ESTÁN DENTRO DE LAS CARTAS */
 .contratar{
     display: flex;
     justify-content: center;
@@ -86,27 +84,30 @@ h1{
     color: black;
     cursor: pointer;
     transition: all 500ms;
-
 }
+
 .contratar-1{
     margin-top: 7rem;
     margin-bottom: 2rem;
 }
+
 .contratar-2{
     margin-top: 3.8rem;
     margin-bottom: 2rem;
 }
+
 .contratar-3{
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+
 .contratar:hover{
     background-color: gold;
     color: black;
     transition: all 500ms;
 }
 
-
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (max-width: 480px){
     .contenedor-imagen{
         width: 100%;
@@ -125,7 +126,7 @@ h1{
     }
     .carta{
        width: 200px;
-       margin: 2em;
+       margin-bottom: 2em;
     }
     .carta h3{
         font-size: 1.8rem;
@@ -176,7 +177,7 @@ h1{
     }
     .carta{
        width: 300px;
-       margin: 2em;
+       margin-bottom: 2em;
     }
     .carta h3{
         font-size: 1.5rem;
@@ -201,7 +202,6 @@ h1{
         margin-top: 3rem;
         margin-bottom: 2rem;
     }
-   
    }
    
    @media (min-width: 780px){
@@ -257,7 +257,6 @@ h1{
         margin-top: 3rem;
         margin-bottom: 2rem;
     }
-   
    }
    
    
@@ -274,10 +273,9 @@ h1{
         text-align: center;
         font-size: 2.5rem;
     }
-
     .carta{
        width: 300px;
-       margin: 2em;
+       margin-bottom: 2em;
     }
     .carta h3{
         font-size: 1.8rem;
@@ -306,6 +304,8 @@ h1{
         font-size: 2rem;
     }
 }
+
+
 @media (min-width: 2000px) {
     .contenedor-imagen{
         width: 100%;
@@ -318,10 +318,9 @@ h1{
         text-align: center;
         font-size: 3.1rem;
     }
-
     .carta{
        width: 600px;
-       margin: 3em;
+       margin-bottom: 5em;
     }
     .carta h3{
         font-size: 2.8rem;
