--- a/css/footerSecciones.css
+++ b/css/footerSecciones.css
@@ -1,6 +1,8 @@
+/* FOOTER PARA LAS DIFERENTES SECCIONES */
 * {
     font-family: Quantico;
 }
+
 footer{
     width: 100%;
     position: absolute;
@@ -24,22 +26,27 @@ footer nav ul li {
     margin: auto;
     position: relative;
 }
+
 footer nav ul li a {
     font-size: 0.5rem;
     text-decoration: none;
     color: white;
     font-family: Georgia, "Times New Roman", Times, serif;
 }
+
 .icono {
     width: 10px;
     height: auto;
     cursor: pointer;
 }
+
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (min-width: 300px) {
     footer{
       width: 100%;
     }
 }
+
 @media (max-width: 480px) {
     footer nav ul li {
         display: inline-block;
@@ -56,14 +63,10 @@ footer nav ul li a {
     }
     footer{
         position: absolute;
-        /* bottom: 0; */
     }
-   
 }
 
 @media (min-width: 481px) and (max-width: 779px) {
-
-  
     footer nav ul li {
         margin: 0.5rem;
     }
@@ -74,10 +77,6 @@ footer nav ul li a {
         width: 100%;
         height: 10px;
     }
-    .contenedor_footer{
-        font-size: 3rem;
-    }
-   
 }
 
 @media (min-width: 780px) {
@@ -86,6 +85,7 @@ footer nav ul li a {
     }
     footer nav ul li a {
         font-size: 0.8rem;
+        margin-right: 1rem;
     }
     .img-logo {
         width: 100%;
@@ -97,7 +97,6 @@ footer nav ul li a {
         width: auto;
         height: 15px;
     }
-   
 }
 
 @media (min-width: 1200px) {
@@ -105,16 +104,16 @@ footer nav ul li a {
       margin: auto;
     }
     footer nav ul li a {
-      font-size: 1.2rem;
-      
+      font-size: 1rem;
+      margin-right: 2rem;
     }
     .img-logo {
       width: 100%;
       height: 50px;
     }
     .icono {
-        width: auto;
-        height: 15px;
+      width: auto;
+      height: 15px;
     }
 }
   @media (min-width: 2000px) {
@@ -122,8 +121,8 @@ footer nav ul li a {
       margin: auto;
     }
     footer nav ul li a {
-      font-size: 1.2rem;
-      margin-right: 1rem;
+      font-size: 1.4rem;
+      margin-right: 2rem;
     }
     .img-logo {
       width: 100%;
