--- a/css/headerMenu.css
+++ b/css/headerMenu.css
@@ -1,3 +1,4 @@
+/* HEADER */
 *{
     padding: 0;
     margin: 0;
@@ -14,6 +15,7 @@ header{
     background-position: center;
     background-size: cover;
 }
+
 nav{
     height: 100px;
     width: 100%;
@@ -21,6 +23,7 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
+
 .logo{
     width: 50px;
     margin-left: 20px;
@@ -42,39 +45,46 @@ nav{
     text-align: center;
     transition: all .5s;
 }
+
 .nav-menu li{
     display: none;
     line-height: 30px;
     margin: 50px 0;
     transition: all .5s;
 }
+
 .nav-menu li a{
     color: white;
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 600;
 }
+
 .nav-menu li a.active, .nav-menu li a:hover{
     color: gold;
     transition: .3s;
 }
+
 #check{
     display: none;
 }
+
 #check:checked ~ .nav-menu{
     position: absolute;
     height: 100vh;
-    /* height: 80%; */
 }
 
 #check:checked ~ .nav-menu li{
     display: block;
 }
+
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (min-width: 300px) {
     nav{
         width: 100%;
     }
 }
+
 @media (max-width: 480px) {
     .bar-btn{
         font-size: 1rem;
@@ -94,8 +104,8 @@ nav{
         border: none;
         color: gold;
       }
-
 }
+
 @media (min-width: 481px) and (max-width: 779px) {
     nav{
         height: 100px;
@@ -121,10 +131,10 @@ nav{
         padding: 5%;
         background: none;
         border: none;
+        color: gold;
       }
-
-  
 }
+
 @media (min-width: 780px) {
     .logo{
         margin-left: 50px;
@@ -153,6 +163,14 @@ nav{
     .nav-menu li a {
         font-size: 0.9rem;
     }
+    .empezamos {
+        padding: 10%;
+    }
+    .empezamos:hover {
+        color: black;
+        background-color: gold;
+        transition: all 0.5s;
+      }
 }
 
 @media (min-width: 1200px) {
@@ -192,7 +210,6 @@ nav{
         background-color: gold;
         transition: all 0.5s;
       }
-
 }
 
 @media (min-width: 2000px) {
@@ -232,5 +249,4 @@ nav{
         background-color: gold;
         transition: all 0.5s;
       }
-
 }
