--- a/css/hosting.css
+++ b/css/hosting.css
@@ -1,11 +1,10 @@
-:root{
-  --color-fondo: #27282F;
-}
+/* HOSTING */
 *{
   font-family: Quantico;
   margin: 0;
   padding: 0;
 }
+
 html {
   min-height: 100%;
   position: relative;
@@ -15,11 +14,12 @@ html {
     display: flex;
     align-items: center;
 }
+
 .contenedor-imagen img{
   width: 100%;
 }
 
-
+/* CONTENEDOR QUE CONTIENE LAS CARTAS-PANELES */
 .contenedor-paneles{
   padding: 4rem;
   width: 100%;
@@ -29,45 +29,49 @@ html {
   justify-content: center;
   
 }
+
 #titulo{
     position: absolute;
     z-index: 100;
     width: 100%;
-    
 }
 
-/* H1 QUE CONTIENE -> (DESARROLLO WEB) */
+/* H1 QUE CONTIENE -> (HOSTING) */
 h1{
   text-align: center;
   font-size: 4rem;
   color:white;
 }
+
 /* CARTA HACE REFERENCIA A LOS ARTICLES QUE ESTAN DENTRO DEL SECTION CONTENEDOR-PANELES */
 .carta{
-  background-color: var(--color-fondo);
+  background-color: #27282F;
   border-radius: 2.5rem;
   margin: 2.5em;
   width: 20rem;
   color: white;
   transition: transform .2s;
 }
+
 .carta h3{
   color: white;
   text-align: center;
   margin: 1em;
   font-size: 2em;
 }
+
 .carta h4{
   text-align: center;
   margin-bottom: 2rem;
   font-size: 1.5em;
-
 }
+
 .carta ul li{
   margin-left: 3rem;
   margin-top: 0.5rem;
   list-style-type: square;
 }
+
 .carta:hover{
   transform: scale(1.1); 
 }
@@ -83,27 +87,30 @@ h1{
   color: black;
   cursor: pointer;
   transition: all 500ms;
-
 }
+
 .contratar-1{
   margin-top: 7rem;
   margin-bottom: 2rem;
 }
+
 .contratar-2{
   margin-top: 3.8rem;
   margin-bottom: 2rem;
 }
+
 .contratar-3{
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+
 .contratar:hover{
   background-color: gold;
   color: black;
   transition: all 500ms;
 }
 
-
+/* MEDIAS PARA LAS DIFERENTES RESOLUCIONES */
 @media (max-width: 480px){
   .contenedor-imagen{
       width: 100%;
@@ -150,7 +157,6 @@ h1{
  }
  
 @media (min-width:481px) and (max-width: 779px){
-     
   .contenedor-imagen{
       width: 100%;
   }
@@ -198,11 +204,9 @@ h1{
       margin-top: 3rem;
       margin-bottom: 2rem;
   }
- 
  }
  
  @media (min-width: 780px){
-  
   .contenedor-imagen{
       width: 100%;
   }
@@ -229,7 +233,7 @@ h1{
   }
   .carta{
      width: 300px;
-     margin: 2em;
+     margin-bottom: 2em;
   }
   .carta h3{
       font-size: 2rem;
@@ -254,12 +258,9 @@ h1{
       margin-top: 3rem;
       margin-bottom: 2rem;
   }
- 
  }
  
- 
  @media (min-width: 1200px){
-     
   .contenedor-imagen{
       width: 100%;
   }
@@ -271,10 +272,9 @@ h1{
       text-align: center;
       font-size: 2.5rem;
   }
-
   .carta{
      width: 300px;
-     margin: 2em;
+     margin-bottom: 2em;
   }
   .carta h3{
       font-size: 1.8rem;
@@ -301,7 +301,6 @@ h1{
   }
   h1{
       position: absolute;
-      margin-top: 3%;
       font-size: 2rem;
       color:white;
   }
@@ -318,10 +317,9 @@ h1{
     text-align: center;
     font-size: 3.1rem;
   }
-
   .carta{
      width: 600px;
-     margin: 3em;
+     margin-bottom: 5em;
   }
   .carta h3{
       font-size: 2.8rem;
@@ -348,9 +346,7 @@ h1{
   }
   h1{
       font-size: 2rem;
-}
-
-
+  }
 }
  
  
